# mySpikeinterface

./: .gitignore  README.md  main.py  main_sorting.ipynb  ops.mat  pyproject.toml  read_spikeGLX.ipynb  requirements.txt  run_dartsort_simulation.ipynb  run_kilosort4.ipynb  run_kilosort4_simulation.ipynb  run_ks4.py  tutrial.ipynb  tutrial_binary.ipynb  tutrial_docker.ipynb  tutrial_sortingTrue.ipynb
myTools/: dartsort_oom_check.py  exchange.py  init_run.py  npy_to_mat.py  output_converter.py  read_simulation.py  read_spikeglx.py  set_gain_and_offset.py
